v0.8.6 - Add copy headers only - Add export text results. Fixes #10 - Allow user select text result - Update Codemirror to v5.58.2 to fix annotatescrollbar addon: Don’t hide matches in collapsed content. - Update CefSharp to v85.3.130 to fix Heap overflow in the freetype library (CVE-2020-15999)

--- a/MDbScriptTool/Content/app/css/app.less
+++ b/MDbScriptTool/Content/app/css/app.less
@@ -325,12 +325,8 @@ a.focus {
         line-height: 1;
         color: @accent-0;
         text-align: center;
-        -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-        -o-transform: translateY(-50%);
         transform: translateY(-50%);
         -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
       }
 
       input {
@@ -460,6 +456,25 @@ a.focus {
 // Hide default input search cancel 'X' button
 input[type="search"]::-webkit-search-cancel-button {
   -webkit-appearance: none;
+}
+
+// Icons
+.fa-save.save-as {
+  transform: rotate(30deg);
+}
+
+.fa.download-overlay {
+  position: relative;
+
+  &::after {
+    background: #000000;
+    content: "\f0ab";
+    font-family: FontAwesome;
+    font-size: .9em;
+    left: .4em;
+    position: absolute;
+    top: .4em;
+  }
 }
 
 .noose {
