--- a/MDbScriptTool/Content/app/css/content-result.less
+++ b/MDbScriptTool/Content/app/css/content-result.less
@@ -14,7 +14,7 @@
   }
 
   .result-sets-container {
-      margin-right: 2px;
+    margin-right: 2px;
   }
 
   .result-sets-header {
@@ -27,6 +27,7 @@
       flex-grow: 1;
       overflow: hidden;
       text-overflow: ellipsis;
+      user-select: text;
       white-space: nowrap;
     }
   }
@@ -35,6 +36,7 @@
     border: 1px solid @dark-1;
     padding: 2px 8px;
     color: @light-0;
+    user-select: text;
   }
 
   .result-set {
